First version using `forever-monitor`.

--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "measly-shock",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.coffee.md",
   "scripts": {
-    "start": "forever start -o out.log -e err.log -l forever.log server.coffee.md",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "coffee forever.coffee.md"
   },
   "author": "Stéphane Alnet <stephane@shimaore.net> (http://stephane.shimaore.net/)",
   "license": "GPLv3",
   "dependencies": {
     "ccnq3": "^0.6.0",
     "coffee-script": "^1.8.0",
-    "forever": "^0.11.1"
+    "forever-monitor": "^1.3.0"
   }
 }
